--- a/CMS/CMS.csproj
+++ b/CMS/CMS.csproj
@@ -116,6 +116,7 @@
     <Content Include="Global.asax" />
     <Content Include="Icon.png" />
     <Content Include="Scripts\admin-controls.js" />
+    <Content Include="Scripts\admin-create-role.js" />
     <Content Include="Scripts\admin-edit-role.js" />
     <Content Include="Scripts\admin-edit-user.js" />
     <Content Include="Scripts\admin-ui.js" />
@@ -184,6 +185,7 @@
     <Compile Include="Models\ViewModels\EditViewModels\EditRoleViewModel.cs" />
     <Compile Include="Models\ViewModels\EditViewModels\EditUserViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\ViewModels\ManageRolesViewModel.cs" />
     <Compile Include="Models\ViewModels\PostViewModel.cs" />
     <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Models\ViewModels\ThreadViewModel.cs" />
